package NYT.NTransactionSupervisor.NProto.NTransactionParticipant;

import "yt_proto/yt/core/misc/proto/guid.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqPrepareTransaction
{
    required NYT.NProto.TGuid transaction_id = 1;
    required uint64 prepare_timestamp = 2;
    optional int32 prepare_timestamp_cluster_tag = 4 [default = 0xf004]; // COMPAT(savrus): Use InvalidCellTag by default
    repeated NYT.NProto.TGuid cell_ids_to_sync_with = 3;
}

message TRspPrepareTransaction
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqCommitTransaction
{
    required NYT.NProto.TGuid transaction_id = 1;
    required uint64 commit_timestamp = 2;
    optional int32 commit_timestamp_cluster_tag = 3 [default = 0xf004]; // COMPAT(savrus): Use InvalidCellTag by default
}

message TRspCommitTransaction
{ }

////////////////////////////////////////////////////////////////////////////////

message TReqAbortTransaction
{
    required NYT.NProto.TGuid transaction_id = 1;
}

message TRspAbortTransaction
{ }

////////////////////////////////////////////////////////////////////////////////

